<resources>
    <string name="app_name">PostOpGo</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="rhinoplasty">Rhinoplasty</string>
    <string name="daily_care">Daily Care</string>
    <string name="meds">Medications</string>
    <string name="restrictions">Restrictions</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="contactphys">Contact Your Physician</string>
    <string name="pwPrompt">Password</string>
    <string name="login">Login</string>
    <string name="rhino_DC">Rhinoplasty: Daily Care</string>
    <string name="rest_Rhino">Rhinoplasty: Restrictions</string>
    <string name="meds_Rhino">Rhinoplasty: Medications</string>
    <string name="Sinus">Sinus Surgery</string>
    <string name="sinusDC">Sinus Surgery: Daily Care</string>
    <string name="sinus_faq">Sinus Surgery: Frequently Asked Questions</string>
    <string name="restSinus">Sinus Surgery: Restrictions</string>
    <string name="medsSin">Sinus Surgery: Medications</string>
    <string name="faq_Rhino">Rhinoplasty: Frequently Asked Questions</string>
</resources>
